--- a/client/static/index.html
+++ b/client/static/index.html
@@ -64,9 +64,8 @@
         }
 
         .loading{
-            height:5px;
+            height:2px;
             background: orange;
-            border-radius: 3px;
         }
 
         #status{
@@ -80,7 +79,7 @@
 <div id="preloader">
     <div class="wrapper">
         <div id="status"></div>
-        <div style="width: 200px;height: 5px;background: #f0f0f0;border-radius: 3px;">
+        <div style="width: 200px;height: 2px;background: #f0f0f0;">
             <div class="loading"></div>
         </div>
     </div>
