--- a/client/static/index.html
+++ b/client/static/index.html
@@ -6,9 +6,11 @@
     <link rel="shortcut icon" type="image/ico" href="/favicon.ico">
     <link rel="stylesheet" href="./font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
-    <link id="skin" rel="stylesheet" href="./jBox/Skins/ShareBlue/jbox.css"/>
+    <link rel="stylesheet" href="./jBox/Skins/ShareBlue/jbox.css"/>
+    <link rel="stylesheet" href="./jqGrid-5.2.1/css/trirand/ui.jqgrid.css"/>
+    <link rel="stylesheet" href="./jqGrid-5.2.1/css/trirand/ui.jqgrid-bootstrap.css"/>
     <!--<link rel="stylesheet" href="index.bundle.css">-->
-    <script type="text/javascript" src="./jQuery/jquery-1.4.2.min.js"></script>
+    <script type="text/javascript" src="./jquery-1.11.3/jquery.js"></script>
 
     <script >
         (function($){
@@ -115,8 +117,8 @@
 
 
 </body>
-
-
+<script type="text/javascript" src="./jqGrid-5.2.1/js/trirand/i18n/grid.locale-cn.js"></script>
+<script type="text/javascript" src="./jqGrid-5.2.1/js/trirand/src/jquery.jqGrid.js"></script>
 <script type="text/javascript" src="./ckeditor/ckeditor.js"></script>
 <!--<script type="text/javascript" src="react.js"></script>-->
 <!--<script type="text/javascript" src="vender.js"></script>-->
