增加antd作为组件库

--- a/client/static/index.html
+++ b/client/static/index.html
@@ -4,11 +4,10 @@
     <title>莲花湖畔</title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <link rel="shortcut icon" type="image/ico" href="/favicon.ico">
-    <link rel="stylesheet" href="./font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="./jBox-0.4.8/jBox.css"/>
     <link rel="stylesheet" href="./jqGrid-5.2.1/css/trirand/ui.jqgrid.css"/>
     <link rel="stylesheet" href="./jqGrid-5.2.1/css/trirand/ui.jqgrid-bootstrap.css"/>
+    <link rel="stylesheet" href="./antd/antd.css"/>
     <!--<link rel="stylesheet" href="index.bundle.css">-->
     <script type="text/javascript" src="./jquery-1.11.3/jquery.js"></script>
 
@@ -39,6 +38,7 @@
                     $('.wrapper').hide();
                     $('#preloader').delay(timeout).fadeOut();
                 },timeout);
+
             })
         })(jQuery);
     </script>
@@ -123,5 +123,4 @@
 <!--<script type="text/javascript" src="react.js"></script>-->
 <!--<script type="text/javascript" src="vender.js"></script>-->
 <script type="text/javascript" src="index.bundle.js"></script>
-<script type="text/javascript" src="./jBox-0.4.8/jBox.js"></script>
 </html>
