--- a/client/static/index.html
+++ b/client/static/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>莲花湖畔</title>
+    <title>木鱼快速开发框架</title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <link rel="shortcut icon" type="image/ico" href="/favicon.ico">
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
