--- a/client/static/index.html
+++ b/client/static/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./antd/antd.css"/>
     <!--<link rel="stylesheet" href="index.bundle.css">-->
     <script type="text/javascript" src="./jquery-1.11.3/jquery.js"></script>
+    <script type="text/javascript" src="./bootstrap/js/bootstrap.js"></script>
 
     <script >
         (function($){
