--- a/client/static/index.html
+++ b/client/static/index.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="./jqGrid-5.2.1/css/trirand/ui.jqgrid-bootstrap.css"/>
     <link rel="stylesheet" href="./jqGrid-5.2.1/css/trirand/ui.jqgrid.css"/>
+    <link rel="stylesheet" href="./zTree-3.5.30/css/zTreeStyle/zTreeStyle.css"/>
     <link rel="stylesheet" href="./antd/antd.css"/>
     <!--<link rel="stylesheet" href="index.bundle.css">-->
     <script type="text/javascript" src="./jquery-1.11.3/jquery.js"></script>
-    <script type="text/javascript" src="./bootstrap/js/bootstrap.js"></script>
+    <!--<script type="text/javascript" src="./bootstrap/js/bootstrap.js"></script>-->
+    <script type="text/javascript" src="./zTree-3.5.30/js/jquery.ztree.core.js"></script>
 
     <script >
         (function($){
@@ -108,7 +110,7 @@
         }
     </style>
 </head>
-<body >
+<body>
 <div id="preloader">
     <div class="loader-left"></div>
     <div class="loader-right"></div>
@@ -124,7 +126,7 @@
 </body>
 <script type="text/javascript" src="./jqGrid-5.2.1/js/trirand/i18n/grid.locale-cn.js"></script>
 <script type="text/javascript" src="./jqGrid-5.2.1/js/trirand/src/jquery.jqGrid.js"></script>
-<script type="text/javascript" src="./ckeditor/ckeditor.js"></script>
+<!--<script type="text/javascript" src="./ckeditor/ckeditor.js"></script>-->
 <!--<script type="text/javascript" src="react.js"></script>-->
 <!--<script type="text/javascript" src="vender.js"></script>-->
 <script type="text/javascript" src="index.bundle.js"></script>
