--- a/client/static/index.html
+++ b/client/static/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="./zTree-3.5.3/css/metroStyle/metroStyle.css"/>
     <link rel="stylesheet" href="./antd/antd.css"/>
     <!--<link rel="stylesheet" href="index.bundle.css">-->
+
+    <script type="text/javascript" src="./stomp/stomp.js"></script>
     <script type="text/javascript" src="./jquery-1.11.3/jquery.js"></script>
     <!--<script type="text/javascript" src="./bootstrap/js/bootstrap.js"></script>-->
     <script type="text/javascript" src="./zTree-3.5.3/js/jquery.ztree.core.js"></script>
