增加通知管理

--- a/client/static/index.html
+++ b/client/static/index.html
@@ -13,9 +13,9 @@
 
     <script type="text/javascript" src="./stomp/stomp.min.js"></script>
     <script type="text/javascript" src="./jquery-1.11.3/jquery.js"></script>
-    <!--<script type="text/javascript" src="./bootstrap/js/bootstrap.js"></script>-->
     <script type="text/javascript" src="./zTree-3.5.3/js/jquery.ztree.core.js"></script>
     <script type="text/javascript" src="./zTree-3.5.3/js/jquery.ztree.exhide.js"></script>
+    <script type="text/javascript" src="./wangEditor-3.0.15/wangEditor.js"></script>
 
     <script >
         (function($){
